Fixed filtering not working on mobile

--- a/styles/style-v2_8.css
+++ b/styles/style-v2_8.css
@@ -1138,10 +1138,10 @@ input{
     margin-left: 30px;
 }
 .hidden{
-    display: none;
+    display: none !important;
 }
 .permhidden{
-    display: none;
+    display: none !important;
 }
 .faded{
     /*display: none;*/
